--- a/css_animation.html
+++ b/css_animation.html
@@ -38,9 +38,7 @@
 </nav>
 <section><h2>«section»</h2>
     <article>
-        <div class="animation-container">
-            <div class="heart"></div>
-        </div>
+        <div class="cat"></div>
     </article>
 </section>
 </div>
