--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML5, CSS3, CSS animáció, Javascript, Webform, képgaléria">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/form.css">
-    <title>HTML5 - CSS3 - Webproject</title>
+    <title>Hazi cica weblap</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <header>
         <div id="banner-content">
             <a href="index.html">
-                <h1 title="Az főcím szövege">HTML5 - CSS3 Gyakorlatok</h1>
+                <h1 title="Az főcím szövege">Hazi cica weblap</h1>
             </a>
             <h2>«header»</h2>
         </div>
@@ -56,15 +56,15 @@
                         </p>
                     </fieldset>
                     <fieldset>
-                        <legend>A pizza mérete</legend>
+                        <legend>Macska méret</legend>
                         <p><label for=""><input type="radio" , name="meret" value="kicsi" , checked>Kicsi</label></p>
                         <p><label for=""><input type="radio" , name="meret" value="kicsi">Nagy</label></p>
                     </fieldset>
                     <fieldset>
-                        <legend>Feltétek</legend>
-                        <p><label for=""><input type="checkbox" name="feltet1" value="sonka" checked>Sonka</label></p>
-                        <p><label for=""><input type="checkbox" name="feltet2" value="sajt">Sajt</label></p>
-                        <p><label for=""><input type="checkbox" name="feltet3" value="gomba">Gomba</label></p>
+                        <legend>Szín</legend>
+                        <p><label for=""><input type="checkbox" name="feltet1" value="sonka" checked>Fekete</label></p>
+                        <p><label for=""><input type="checkbox" name="feltet2" value="sajt">Kék</label></p>
+                        <p><label for=""><input type="checkbox" name="feltet3" value="gomba">Fehér</label></p>
                     </fieldset>
                     <p><label for="">Mennyiség: <input type="number" name="mennyiseg"></label></p>
                     <p><label for="">Kért kiszállítási idő: <input type="date" name="kiszallitas"></label></p>
