--- a/galery.html
+++ b/galery.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/fancybox/jquery.easing-1.4.pack.js"></script>
     <link rel="stylesheet" href="../fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
     <script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-    <title>HTML5 - CSS3 - Webproject</title>
+    <title>Hazi cica weblap</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <header>
         <div id="banner-content">
             <a href="index.html">
-                <h1 title="Az főcím szövege">HTML5 - CSS3 Gyakorlatok</h1>
+                <h1 title="Az főcím szövege">Hazi cica weblap</h1>
             </a>
             <h2>«header»</h2>
         </div>
@@ -50,41 +50,39 @@
             <article>
                 <h2>«Képgaléria»</h2>
                 <div class="gallery">
-                    <figure class="item">
-                        <a id="example1" href="images/1.jpg"><img src="images/1.jpg"
-                                alt="Őszi levelek"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/2.jpg"><img src="images/2.jpg"
-                                alt="Krizantém"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/3.jpg"><img src="images/3.jpg" alt="Patak"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/4.jpg"><img src="images/4.jpg"
-                                alt="Sivatagi táj"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/5.jpg"><img src="images/5.jpg" alt="Sivatag"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/6.jpg"><img src="images/6.jpg" alt="Kikötő"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/7.jpg"><img src="images/7.jpg"
-                                alt="Erdei virágok"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/8.jpg"><img src="images/8.jpg" alt="Erdő"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/9.jpg"><img src="images/9.jpg"
-                                alt="Frangipani virágok"></a>
-                    </figure>
-                    <figure class="item">
-                        <a href="images/10.jpg"><img src="images/10.jpg" alt="folyo"></a>
-                    </figure>
+                    <div style="display: flex;flex-direction: column;height: 100%;justify-content: space-between;">
+                        <figure class="item">
+                            <a id="example1" href="images/1.jpg"><img src="images/1.jpg" alt="Őszi levelek"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/2.jpg"><img src="images/2.jpg" alt="Krizantém"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/3.jpg"><img src="images/3.jpg" alt="Patak"></a>
+                        </figure>
+                    </div>
+                    <div style="display: flex;flex-direction: column;height: 100%;justify-content: space-between;">
+                        <figure class="item">
+                            <a href="images/4.jpg"><img src="images/4.jpg" alt="Sivatagi táj"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/5.jpg"><img src="images/5.jpg" alt="Sivatag"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/6.jpg"><img src="images/6.jpg" alt="Kikötő"></a>
+                        </figure>
+                    </div>
+                    <div style="display: flex;flex-direction: column;height: 100%;justify-content: space-between;">
+                        <figure class="item">
+                            <a href="images/7.jpg"><img src="images/7.jpg" alt="Erdei virágok"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/8.jpg"><img src="images/8.jpg" alt="Erdő"></a>
+                        </figure>
+                        <figure class="item">
+                            <a href="images/9.jpg"><img src="images/9.jpg" alt="Frangipani virágok"></a>
+                        </figure>
+                    </div>
                 </div>
             </article>
         </section>
