--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML5-CSS3 Weboldal projekt">
     <meta name="keywords" content="HTML5, CSS3, CSS animáció, Javascript, Webform, képgaléria">
     <link rel="stylesheet" href="css/style.css">
-    <title>HTML5 - CSS3 - Webproject</title>
+    <title>Hazi cica weblap</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <header>
         <div id="banner-content">
             <a href="index.html">
-                <h1 title="Az főcím szövege">HTML5 - CSS3 Gyakorlatok</h1>
+                <h1 title="Az főcím szövege">Hazi cica weblap</h1>
             </a>
             <h2>«header»</h2>
         </div>
