--- a/table.html
+++ b/table.html
@@ -8,7 +8,7 @@
     <meta name="description" content="HTML5-CSS3 Weboldal projekt">
     <meta name="keywords" content="HTML5, CSS3, CSS animáció, Javascript, Webform, képgaléria">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/table.css">
     <title>Hazi cica weblap</title>
 
     <style>
@@ -41,13 +41,7 @@
             background-color: cadetblue;
             color: white;
         }
-        @media screen and (min-width: 640px)
-        {
-            section
-            {
-                background-color: lightgreen;
-            }
-        }
+        
         @media screen and (min-width: 640px)
         {
             #banner-content
@@ -59,7 +53,7 @@
 </head>
 
 <body>
-    <!--Benkő Sámuel-->
+    <!--Szommer David-->
     <header>
         <div id="banner-content">
             <a href="index.html">
@@ -95,37 +89,37 @@
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>név</th>
+                                <th>gazdi</th>
                                 <th>foglalkozás</th>
-                                <th>lakcím</th>
+                                <th>cicanév</th>
                                 <th>telefon</th>
-                                <th>email</th>
+                                <th>gazdi email</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>Joe Doe</td>
-                                <td>webfejlesztő</td>
-                                <td>Baker str. 1.</td>
-                                <td>111-222</td>
-                                <td>joe.doe@email.com</td>
+                                <td>Kakira Tomi</td>
+                                <td>Mekis pultos</td>
+                                <td>Cirmi</td>
+                                <td>532-742</td>
+                                <td>karika.tomi@email.com</td>
                             </tr>
                             <tr>
                                 <td>2</td>
-                                <td>Gipsz Jakab</td>
-                                <td>programozó</td>
-                                <td>Pékek utca, 10.</td>
-                                <td>222-333</td>
-                                <td>gipsz.jakab@gmail.com</td>
+                                <td>Sutyerák Szabi</td>
+                                <td>Sörcsapos</td>
+                                <td>Foltos</td>
+                                <td>255-354</td>
+                                <td>szabi.sutyerák@gmail.com</td>
                             </tr>
                             <tr>
                                 <td>3</td>
-                                <td>Bél Flóra</td>
-                                <td>gasztroentreológus</td>
-                                <td>Vak Bél utca, 1.</td>
-                                <td>333-444</td>
-                                <td>bel.flora@email.com</td>
+                                <td>Felner Geri</td>
+                                <td>Fociedző</td>
+                                <td>Gombi</td>
+                                <td>343-765</td>
+                                <td>geri.felner@email.com</td>
                             </tr>
                         </tbody>
                     </table>
